namespace DesignPatterns.BuilderPattern
{
    public class Bottle : Packing
    {
        public string pack()
        {
            return "bottle";
        }
    }
}