namespace DesignPatterns.BuilderPattern
{
    public interface Packing
    {
        string pack();
    }
}