namespace DesignPatterns.BuilderPattern
{
    public class Wapper : Packing
    {
        public string pack()
        {
            return "wapper";
        }
    }
}